--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.0</version>
+        </dependency>
     </dependencies>
 
     <build>
