--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>primefaces</artifactId>
             <version>5.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+        </dependency>
     </dependencies>
 
     <build>
